--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
     "bootstrap-cards": "^1.18.0",
+    "boxicons": "^2.1.4",
     "chart.js": "^4.2.1",
     "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
