--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-vis": "^1.11.12",
