--- a/client/package.json
+++ b/client/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "cms",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
+    "@headlessui/react": "^1.7.16",
+    "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.4",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.5",
-    "bootstrap": "^5.2.3",
-    "bootstrap-cards": "^1.18.0",
-    "boxicons": "^2.1.4",
-    "chart.js": "^4.2.1",
-    "mdb-react-ui-kit": "^6.0.0",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "http": "^0.0.1-security",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.7.2",
-    "react-chartjs-2": "^5.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-pro-sidebar": "^1.1.0-alpha.1",
-    "react-router-dom": "^6.9.0",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
-    "react-vis": "^1.11.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
