--- a/client/package.json
+++ b/client/package.json
@@ -3,20 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.1",
     "@tailwindcss/forms": "^0.5.4",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
+    "cdbreact": "^1.5.18",
+    "gsap-trial": "^3.12.2",
     "http": "^0.0.1-security",
+    "loaders.css": "^0.1.2",
+    "mdb-react-ui-kit": "^6.2.0",
+    "mdbreact": "^5.2.0",
+    "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0",
+    "react-bootstrap": "^2.9.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.68.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
